docs(reports): M-002-tail class B — broker-side hiccup amplified by shared-host CPU
Instrumented broker GC + CPU across three more runs: one spike aligned
with a 93ms broker GC, one did not; broker CPU intermittently hit its
2-core limit; Postgres/Redis stayed low. Coherent mechanism is a brief
broker-side hiccup amplified to seconds by the CPU-saturated shared host
(gateway+worker+broker on 10 cores). The exact sub-second trigger per
spike could not be pinned on this shrunk/shared stack, so it is judged a
local-stack artifact to be reproduced in the isolated load env.

Co-Authored-By: Claude Opus 4.8 <noreply@anthropic.com>